rmk-macro/tests/compile_fail/input_device_invalid_syntax.rs
use rmk_macro::input_device;

#[input_device(publish)]
pub struct BadInputDevice;

fn main() {}
