rmk-macro/tests/compile_fail/input_device_invalid_syntax.stderr
error: invalid attribute syntax. Expected `key = value`
 --> tests/compile_fail/input_device_invalid_syntax.rs:3:16
  |
3 | #[input_device(publish)]
  |                ^^^^^^^
